<resources>
    <string name="app_name">TasksApp</string>

    <!-- Status Task   -->
    <string name="status_task_todo">A FAZER</string>
    <string name="status_task_doing">FAZENDO</string>
    <string name="status_task_done">FEITAS</string>
    <!-- Generic  -->
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="text_title_warning">Atenção!</string>
    <string name="text_button_warning">Entendi!</string>
    <string name="password_empty">Digite a sua senha!</string>
    <string name="email_empty">Digite o seu e-mail!</string>
    <string name="generic_error">Ocorreu um erro!</string>
    <string name="task_list_empty">Nenhuma tarefa cadastrada!</string>
    <string name="task_list_loading">Carregando as tarefas, aguarde!</string>
    <string name="task_delete_success">Tarefa removida com sucesso!</string>
    <string name="text_btn_dialog_confirm">Confirmar</string>
    <string name="title_dialog_delete">Deseja remover esta tarefa?</string>
    <string name="message_dialog_delete">Clique em confirmar para remover a tarefa</string>
    <!-- Login Fragment  -->
    <string name="btnlogin">Login</string>
    <!-- Register Fragment  -->
    <string name="register">Criar Conta</string>
    <!-- Recover Account Fragment  -->
    <string name="recover_account">Recuperar Conta</string>
    <string name="tv_update_password_raf">Alterar senha</string>
    <string name="text_message_recover_account">Enviamos um link para o seu e-mail para redefinir sua senha!</string>
    <!-- Form Task Fragment -->
    <string name="tv_descricao_ftf">Descrição</string>
    <string name="et_descriaco_hint_ftf">Criar nova tarefa</string>
    <string name="tv_status_ftf">Status</string>
    <string name="rb_todo">A Fazer\n</string>
    <string name="rb_doing">Fazendo</string>
    <string name="rb_done">Feitas</string>
    <string name="task_saved_success">Tarefa salva com sucesso!</string>
    <string name="task_updated_success">Tarefa atualizada com sucesso!</string>
    <string name="btn_salvar_ftf">Salvar</string>
    <string name="tv_title_mtb_ftf">Nova tarefa</string>
    <string name="description_empty_form_task_ftf">Digite uma nova tarefa!</string>
    <string name="toolBar_updating_ftf">Editando tarefa</string>
    <!-- Todo Fragment-->
    <string name="fab_description_tf">Botão adicionar nova tarefa</string>
    <!-- Home Fragment-->
    <string name="text_title_dialog_confirm_logout">Deseja sair da sua conta?</string>
    <string name="text_btn_dialog_confirm_logout">Confirmar</string>
    <string name="text_message_dialog_confirm_logout">Pressione em Confirmar para sair da sua conta</string>
    <!-- Item RecyclerView-->
    <string name="btn_delete">Remover></string>
    <string name="btn_edit">Editar></string>
    <string name="btn_details">Detalhes></string>
    <!-- Firebase Auth -->
    <string name="account_not_registered_fireAuth">Nenhuma conta encontrada para este e-mail!</string>
    <string name="invalid_email_register_fireAuth">Insira um e-mail válido!</string>
    <string name="invalid_password_fireAuth">Senha inválida, tente novamente!</string>
    <string name="email_in_use_register_fireAuth">Este e-mail já está sendo utilizado!</string>
    <string name="strong_password_fireAuth">Insira uma senha mais forte!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>