<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Criar layout da tela de login do app" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:padding="0dp"
                android:text="@string/btn_delete"
                android:textSize="11sp"
                app:backgroundTint="@color/btn_delete"
                app:layout_constraintBottom_toBottomOf="@+id/btnEdit"
                app:layout_constraintEnd_toStartOf="@+id/btnEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnEdit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_btn"
                android:padding="0dp"
                android:text="@string/btn_edit"
                android:textSize="11sp"
                app:backgroundTint="@color/btn_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnDetails"
                app:layout_constraintStart_toEndOf="@id/btnDelete"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                app:layout_constraintHorizontal_bias="0.5"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:padding="0dp"
                android:text="@string/btn_details"
                android:textSize="11sp"
                app:backgroundTint="@color/btn_details"
                app:layout_constraintBottom_toBottomOf="@+id/btnEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnEdit"
                app:layout_constraintTop_toTopOf="@+id/btnEdit" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>